--- a/1-homepage.html
+++ b/1-homepage.html
@@ -43,203 +43,162 @@
     />
   </head>
   <body class="body">
-    <header class="header">
-      <div class="container">
-        <nav class="navbar navbar-expand-sm navbar-dark pt-4 px-0">
-          <button
-            class="navbar-toggler border-0 align-self-start mt-3"
-            type="button"
-            data-toggle="collapse"
-            data-target="#navbarNav"
-            aria-controls="navbarNav"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
-            <span class="navbar-line1"></span>
-            <span class="navbar-line2 my-1"></span>
-            <span class="navbar-line3"></span>
-          </button>
-          <a
-            class="navbar-brand mx-auto d-flex flex-column flex-sm-row align-items-center mt-3"
-            href="#"
-          >
-            <img
-              src="images/smile_off.png"
-              alt="navbar-logo"
-              width="37px"
-              class="mr-4 mb-3 mb-sm-0 mr-sm-3 img-fluid"
-            />
-            <img
-              src="images/logo.png"
-              alt="navbar-logo-text"
-              width="114px"
-              class="mr-4 img-fluid"
-            />
-          </a>
-          <div class="collapse navbar-collapse text-center mt-3" id="navbarNav">
-            <ul class="navbar-nav ml-auto font-weight-bold">
-              <li class="nav-item">
-                <a class="nav-link text-white px-1" href="#">COURSES</a>
-              </li>
-              <li class="nav-item px-0 px-sm-5 py-2 py-sm-0">
-                <a class="nav-link text-white px-1" href="#">PRICING</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link text-white px-1" href="#">LOGIN</a>
-              </li>
-            </ul>
-          </div>
-        </nav>
+      <header class="header">
+          <div class="container">
+              <nav class="navbar navbar-expand-sm navbar-dark pt-4 px-0">
+                  <button class="navbar-toggler border-0 align-self-start mt-3" type="button" data-toggle="collapse"
+                          data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
+                          aria-label="Toggle navigation">
+                      <span class="navbar-line1"></span>
+                      <span class="navbar-line2 my-1"></span>
+                      <span class="navbar-line3"></span>
+                  </button>
+                  <a class="navbar-brand mx-auto d-flex flex-column flex-sm-row align-items-center mt-3" href="#">
+                      <img src="images/smile_off.png" alt="navbar-logo" width="37px"
+                           class="mr-4 mb-3 mb-sm-0 mr-sm-3 img-fluid"/>
+                      <img src="images/logo.png" alt="navbar-logo-text" width="114px" class="mr-4 img-fluid"/>
+                  </a>
+                  <div class="collapse navbar-collapse text-center mt-3" id="navbarNav">
+                      <ul class="navbar-nav ml-auto font-weight-bold">
+                          <li class="nav-item">
+                              <a class="nav-link text-white px-1" href="#">COURSES</a>
+                          </li>
+                          <li class="nav-item px-0 px-sm-5 py-2 py-sm-0">
+                              <a class="nav-link text-white px-1" href="#">PRICING</a>
+                          </li>
+                          <li class="nav-item">
+                              <a class="nav-link text-white px-1" href="#">LOGIN</a>
+                          </li>
+                      </ul>
+                  </div>
+              </nav>
 
-        <section class="hero text-center text-white">
-          <h1 class="font-weight-bold my-0">Get schooled</h1>
-          <ul
-            class="list-group list-group-horizontal justify-content-center font-weight-bold pb-4"
-          >
-            <li class="list-group-item">SMILES</li>
-            <li class="list-group-item px-5">GRIN</li>
-            <li class="list-group-item">LAUGH</li>
-          </ul>
-          <button class="btn btn-smile text-white mt-3">
-            REGISTER FOR FREE
-          </button>
-          <p class="hero-learn font-weight-bold">
-            <span>Learn</span> from the pros
-          </p>
-          <div class="row pros">
-            <div class="col-6 col-md-3 pro1">
-              <img src="images/profile_1.jpg" alt="profile 1" />
-              <h3>Phillip Massey</h3>
-              <span>« Smile of the year »</span>
-              <span>2018 - 2019</span>
-            </div>
-            <div class="col-6 col-md-3 pro2">
-              <img src="images/profile_2.jpg" alt="profile 2" />
-              <h3>Nannie Lawrence</h3>
-              <span>Best « little smile »</span>
-              <span>2017</span>
-            </div>
-            <div class="col-6 col-md-3 pro3">
-              <img src="images/profile_3.jpg" alt="profile 3" />
-              <h3>Bruce Walters</h3>
-              <span>Best « Friend Smile »</span>
-              <span>live performance 2019</span>
-            </div>
-            <div class="col-6 col-md-3 pro4">
-              <img src="images/profile_4.jpg" alt="profile 4" />
-              <h3>Henry Hughes</h3>
-              <span>« 24h smiles » winner</span>
-              <span>2016 - 2019</span>
-            </div>
+              <section class="hero text-center text-white">
+                  <h1 class="font-weight-bold my-0">Get schooled</h1>
+                  <ul class="list-group list-group-horizontal justify-content-center font-weight-bold pb-4">
+                      <li class="list-group-item">SMILES</li>
+                      <li class="list-group-item px-5">GRIN</li>
+                      <li class="list-group-item">LAUGH</li>
+                  </ul>
+                  <button class="btn btn-smile text-white mt-3">
+                      REGISTER FOR FREE
+                  </button>
+                  <p class="hero-learn font-weight-bold">
+                      <span>Learn</span> from the pros
+                  </p>
+                  <div class="row pros">
+                      <div class="col-6 col-md-3 pro1">
+                          <img src="images/profile_1.jpg" alt="profile 1"/>
+                          <h3>Phillip Massey</h3>
+                          <span>« Smile of the year »</span>
+                          <span>2018 - 2019</span>
+                      </div>
+                      <div class="col-6 col-md-3 pro2">
+                          <img src="images/profile_2.jpg" alt="profile 2"/>
+                          <h3>Nannie Lawrence</h3>
+                          <span>Best « little smile »</span>
+                          <span>2017</span>
+                      </div>
+                      <div class="col-6 col-md-3 pro3">
+                          <img src="images/profile_3.jpg" alt="profile 3"/>
+                          <h3>Bruce Walters</h3>
+                          <span>Best « Friend Smile »</span>
+                          <span>live performance 2019</span>
+                      </div>
+                      <div class="col-6 col-md-3 pro4">
+                          <img src="images/profile_4.jpg" alt="profile 4"/>
+                          <h3>Henry Hughes</h3>
+                          <span>« 24h smiles » winner</span>
+                          <span>2016 - 2019</span>
+                      </div>
+                  </div>
+              </section>
           </div>
-        </section>
-      </div>
-    </header>
-    <main class="main">
-      <section class="quotes section d-flex align-items-center">
-        <div class="container">
-          <div
-            id="carouselExampleControls"
-            class="carousel slide"
-            data-ride="carousel"
-          >
-            <div class="carousel-inner">
-              <div class="carousel-item active">
-                <div class="row mx-auto align-items-center">
-                  <div class="col-12 col-sm-2 col-lg-2 offset-lg-1 text-center">
-                    <img
-                      src="images/profile_5.jpg"
-                      class="d-block align-self-center"
-                      alt="Carousel Pic 1"
-                    />
+      </header>
+      <main class="main">
+          <section class="quotes section d-flex align-items-center">
+              <div class="container">
+                  <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+                      <div class="carousel-inner">
+                          <!-- Carousel items will be dynamically added here -->
+                      </div>
+                      <a class="carousel-control-prev arrow-left" href="#carouselExampleControls" role="button"
+                         data-slide="prev">
+                          <img src="images/arrow_white_left.png" alt="Quote Previous" aria-hidden="true"/>
+                          <span class="sr-only">Previous</span>
+                      </a>
+                      <a class="carousel-control-next arrow-right" href="#carouselExampleControls" role="button"
+                         data-slide="next">
+                          <img src="images/arrow_white_right.png" alt="Quote Next" aria-hidden="true"/>
+                          <span class="sr-only">Next</span>
+                      </a>
                   </div>
-                  <div class="col-12 col-sm-7 offset-sm-2 col-lg-9 offset-lg-0">
-                    <div class="quote-text">
-                      <p class="text-white">
-                        « Those tutorials are concise and go straight to the
-                        point. I can’t think of a better place to learn smiling.
-                        And it’s so fun!
-                      </p>
-                      <h4 class="text-white font-weight-bold">Person Name</h4>
-                      <span class="text-white">weather presenter</span>
-                    </div>
-                  </div>
-                </div>
               </div>
-              <div class="carousel-item">
-                <div class="row mx-auto align-items-center">
-                  <div class="col-12 col-sm-2 col-lg-2 offset-lg-1 text-center">
-                    <img
-                      src="images/profile_5.jpg"
-                      class="d-block align-self-center"
-                      alt="Carousel Pic 1"
-                    />
-                  </div>
-                  <div class="col-12 col-sm-7 offset-sm-2 col-lg-9 offset-lg-0">
-                    <div class="quote-text">
-                      <p class="text-white">
-                        « Those tutorials are concise and go straight to the
-                        point. I can’t think of a better place to learn smiling.
-                        And it’s so fun!
-                      </p>
-                      <h4 class="text-white font-weight-bold">Person Name</h4>
-                      <span class="text-white">weather presenter</span>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="carousel-item">
-                <div class="row mx-auto align-items-center">
-                  <div class="col-12 col-sm-2 col-lg-2 offset-lg-1 text-center">
-                    <img
-                      src="images/profile_5.jpg"
-                      class="d-block align-self-center"
-                      alt="Carousel Pic 1"
-                    />
-                  </div>
-                  <div class="col-12 col-sm-7 offset-sm-2 col-lg-9 offset-lg-0">
-                    <div class="quote-text">
-                      <p class="text-white">
-                        « Those tutorials are concise and go straight to the
-                        point. I can’t think of a better place to learn smiling.
-                        And it’s so fun!
-                      </p>
-                      <h4 class="text-white font-weight-bold">Person Name</h4>
-                      <span class="text-white">weather presenter</span>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <a
-              class="carousel-control-prev arrow-left"
-              href="#carouselExampleControls"
-              role="button"
-              data-slide="prev"
-            >
-              <img
-                src="images/arrow_white_left.png"
-                alt="Quote Previous"
-                aria-hidden="true"
-              />
-              <span class="sr-only">Previous</span>
-            </a>
-            <a
-              class="carousel-control-next arrow-right"
-              href="#carouselExampleControls"
-              role="button"
-              data-slide="next"
-            >
-              <img
-                src="images/arrow_white_right.png"
-                alt="Quote Next"
-                aria-hidden="true"
-              />
-              <span class="sr-only">Next</span>
-            </a>
-          </div>
-        </div>
-      </section>
-    </main>
+          </section>
+      </main>
+    <script>
+
+      fetch('https://smileschool-api.hbtn.info/quotes')
+          .then(response => response.json())
+          .then(data => {
+              const quotes = data.quotes;
+              const carouselInner = document.querySelector('.carousel-inner');
+
+              quotes.forEach(quote => {
+                  const carouselItem = document.createElement('div');
+                  carouselItem.classList.add('carousel-item');
+
+                  const row = document.createElement('div');
+                  row.classList.add('row', 'mx-auto', 'align-items-center');
+
+                  const col1 = document.createElement('div');
+                  col1.classList.add('col-12', 'col-sm-2', 'col-lg-2', 'offset-lg-1', 'text-center');
+
+                  const img = document.createElement('img');
+                  img.classList.add('d-block', 'align-self-center');
+                  img.setAttribute('src', 'images/profile_5.jpg');
+                  img.setAttribute('alt', 'Carousel Pic');
+
+                  col1.appendChild(img);
+                  row.appendChild(col1);
+
+                  const col2 = document.createElement('div');
+                  col2.classList.add('col-12', 'col-sm-7', 'offset-sm-2', 'col-lg-9', 'offset-lg-0');
+
+                  const quoteText = document.createElement('div');
+                  quoteText.classList.add('quote-text');
+
+                  const p = document.createElement('p');
+
+                  p.classList.add('text-white');
+                    p.textContent = '« ' + quote.text + ' »';
+
+                    const h4 = document.createElement('h4');
+                    h4.classList.add('text-white', 'font-weight-bold');
+                    h4.textContent = quote.name;
+
+                    const span = document.createElement('span');
+                    span.classList.add('text-white');
+                    span.textContent = quote.title;
+
+                    quoteText.appendChild(p);
+                    quoteText.appendChild(h4);
+                    quoteText.appendChild(span);
+                    col2.appendChild(quoteText);
+                    row.appendChild(col2);
+                    carouselItem.appendChild(row);
+
+                    // Add the 'active' class to the first carousel item
+                    if (!carouselInner.firstChild) {
+                        carouselItem.classList.add('active');
+                    }
+
+                    carouselInner.appendChild(carouselItem);
+                });
+            })
+            .catch(error => {
+                console.error('Error fetching quotes:', error);
+            });
+    </script>
   </body>
 </html>
