--- a/homepage.html
+++ b/homepage.html
@@ -41,7 +41,7 @@
       crossorigin="anonymous"
     />
 
-     <!-- Slick -->
+     <!--slick-->
      <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
   </head>
   <body class="body">
@@ -305,5 +305,5 @@
     <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
     <script src="script.js"></script>
   
-  </hbody>
+  </body>
 </html>
